--- a/style.css
+++ b/style.css
@@ -28,3 +28,13 @@ a:link {
   a:hover {
     text-decoration: none;
   }
+p.target{
+  border: 5px solid rgb(222, 165, 33);
+  padding: 30px;
+  margin: 50px;
+  width: 1000px;
+  height: 350;
+}
+.relative{
+  left:200px;
+}
