--- a/pracftice-js/project.css
+++ b/pracftice-js/project.css
@@ -1,10 +1,3 @@
-select.target{
-  border: 5px solid rgb(222, 165, 33);
-  padding: 30px;
-  margin: 50px;
-  width: 1000px;
-  height: 350;
-}
-.relative{
-  left:200px;
+body{
+  background-color: rgba(216, 212, 212, 0.397);
 }
